# Physical-AI-Humanoid-Robotics-textbook

./: .gitignore  README.md  package.json  test_api.py  vercel.json
backend/: .env.example  .flake8  .vercelignore  Dockerfile  Dockerfile.hf  README.md  app.py  docker-compose.yml  fly.toml  nixpacks.toml  pyproject.toml  railway.json  render.yaml  requirements-vercel.txt  requirements.txt  vercel.json
backend/api/: index.py  requirements.txt
backend/scripts/: index_content.py
backend/src/: main.py
backend/src/agents/: __init__.py  translation_skill.py
backend/src/api/: auth.py  content.py  personalization.py  progress.py  quizzes.py  rag.py  translation.py  user.py
backend/src/auth/: dependencies.py  oauth.py
backend/src/database/: base.py
backend/src/llm/: __init__.py  openai_client.py  provider.py
backend/src/models/: __init__.py  chapter.py  personalization_profile.py  quiz.py  user.py
backend/src/services/: content_service.py  indexing_service.py  quiz_service.py  rag_service.py  translation_service.py
backend/src/services/agents/: base.py  hardware_context.py  physical_ai_instructor.py
backend/src/services/skills/: __init__.py  context_selection.py  hardware_mapping.py  real_world_robot_example.py  simplify_for_beginner.py
backend/src/utils/: errors.py  logger.py
backend/tests/: conftest.py
backend/tests/contract/: test_api_contracts.py
backend/tests/integration/: test_user_journeys.py
backend/tests/unit/: test_main.py  test_rag.py  test_stats.py
docs/: SUBAGENT_REUSE_PATTERNS.md
frontend/: .env.example  .eslintrc.json  (+5 more)
(+153 files in other folders)
