[project]
name = "physical-ai-humanoid-robotics-textbook-backend"
version = "0.1.0"
description = "The backend for the Physical AI Humanoid Robotics Textbook"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.115.0",
    "python-multipart==0.0.17",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "qdrant-client==1.12.1",
    "openai==1.55.0",
    "anthropic==0.39.0",
    "google-generativeai==0.8.3",
    "tiktoken==0.8.0",
    "pyjwt==2.10.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.28.0",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0",
    "email-validator==2.2.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"